--- a/client/main.css
+++ b/client/main.css
@@ -14,17 +14,14 @@ body {
     padding-right: 10px;
 }
 
-.note-item {
+.myNote {
 	width: 300px;
 	height: 300px;
 	min-width: 300px;
 	min-height: 300px;
 	max-width: 300px;
 	max-height: 300px;
-	background-color: #d6d6d6;
+	background-color: #ffffff;
+	color: #000000;
 	padding: 10px 10px 10px 10px;
-}
-
-.myNote-Title {
-	
 }
