--- a/client/main.css
+++ b/client/main.css
@@ -9,9 +9,11 @@ body {
   text-align: center;
 }
 
+.navbar-nav.navbar-right:last-child {
+    margin-right: 0;
+}
+
 .main {
-	padding-left: 10px;
-    padding-right: 10px;
 }
 
 .myNote {
@@ -23,5 +25,25 @@ body {
 	max-height: 300px;
 	background-color: #ffffff;
 	color: #000000;
-	padding: 10px 10px 10px 10px;
+	padding: 30px, 30px, 30px, 30px;
+	margin-left: 37px;
+	border-radius: 5px;
+}
+
+.title {
+	text-align: center;
+	height: 60px;
+	min-height: 60px;
+	max-height: 60px;
+	padding-top: .5px;
+}
+
+.content {
+	height: 200px;
+	min-height: 200px;
+	max-height: 200px;
+}
+
+.keywords {
+	height: 50px;
 }
