--- a/client/main.css
+++ b/client/main.css
@@ -18,6 +18,10 @@ body {
 }
 
 .main {
+	margin-left: 5px;
+	margin-rigth: 5px;
+	padding-right: 5px;
+	padding-left: 5px;
 }
 
 .myNote {
@@ -30,7 +34,7 @@ body {
 	background-color: #ffffff;
 	color: #000000;
 	padding: 30px, 30px, 30px, 30px;
-	margin-left: 35px;
+	margin-left: 37px;
 	margin-top: 35px;
 	border-radius: 5px;
 }
