--- a/client/main.css
+++ b/client/main.css
@@ -11,15 +11,12 @@ body {
     border-color: #000000 !important;
 }
 
-
-
 .home {
   text-align: center;
 }
 
-.main {
-	margin-left: 5px;
-	margin-rigth: 5px;
+.newNote {
+	margin-top: 35px;
 	padding-right: 5px;
 	padding-left: 5px;
 }
@@ -34,8 +31,8 @@ body {
 	background-color: #ffffff;
 	color: #000000;
 	padding: 30px, 30px, 30px, 30px;
-	margin-left: 37px;
-	margin-top: 35px;
+	margin-left: 50px;
+	margin-top: 40px;
 	border-radius: 5px;
 }
 
@@ -51,10 +48,12 @@ body {
 	height: 200px;
 	min-height: 200px;
 	max-height: 200px;
+	padding-left: 5px;
 }
 
 .keywords {
 	height: 50px;
 	font-weight: bold;
 	font-style: italic;
+	padding-left: 5px;
 }
